# cinjn

./: .gitignore  CMakeLists.txt  README
hdr/: object.h  platform.h  shader.h  texture.h  types.h
hdr/ds/: vec.h
hdr/glad/: glad.h
hdr/parsing/: image.h  ttf.h
hdr/utils/: fs.h  log.h  resmgr.h
lib/glad/: README  glad.c
res/shader/t2/: vertex.glsl
res/shader/triangle/: fragment.glsl  vertex.glsl
src/: main.c  object.c  shader.c  texture.c
src/parsing/: image.c  ttf.c
src/utils/: fs.c  log.c  resmgr.c
